# Fillr

./: .gitignore  README.md  alembic.ini  docker-compose.yml  invite.ics  pyproject.toml
alembic/: env.py
alembic/versions/: 49039137e87b_create_users_table.py
docs/: PLANNING.md  architecture.md  deployment.md  techstack.md  userjourney.md  workflow.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/files/[id]/: page.js
frontend/src/app/jobs/[id]/: page.js
frontend/src/app/login/: page.js
frontend/src/app/repos/: page.js
frontend/src/app/repos/[id]/: page.js
frontend/src/app/repos/[id]/ask/: page.js
frontend/src/app/repos/[id]/files/: page.js
frontend/src/app/signup/: page.js
frontend/src/lib/: auth.js  mockData.js
src/repolens/: __init__.py
src/repolens/api/: deps.py  main.py  schemas.py
src/repolens/api/routes/: auth.py  health.py  jobs.py  repos.py
src/repolens/core/: config.py
src/repolens/db/: __init__.py  models.py  session.py
src/repolens/ingest/: __init__.py
src/repolens/llm/: __init__.py
src/repolens/services/: auth.py  repositories.py
src/repolens/web/: __init__.py
src/repolens/worker/: __init__.py
tests/api/: test_health.py  test_repos.py
