[project]
name = "repolens"
version = "0.1.0"
description = "RepoLens mines repository structure and history, then uses LLMs for grounded explanations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["repolens*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
